@@ -93,9 +93,6 @@ public:
     template<typename U> HRESULT copyRefTo(U**);
     void adoptRef(T*);
 
-    // FIXME: Remove releaseRef once we change all callers to call leakRef instead.
-    T* releaseRef() { return leakRef(); }
-
 private:
     static T* copyQueryInterfaceRef(IUnknown*);
     static T* createInstance(const IID& clsid);
